test/classes/initializers/errors/iteratorInitEqualsMethod.chpl
record iteratorInitEquals {
  iter init=(x) {}
}
