test/classes/initializers/errors/iteratorInitEqualsMethod.good
iteratorInitEqualsMethod.chpl:2: error: iterators can't be copy initializers, please rename this iterator
